[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "frameml"
version = "0.1.4"
description = "A lightweight markup language for interacting with machine learning models"
authors = [{ name = "Jake Downie" }, {name = "Ronan Maharaj"}]
requires-python = ">=3.6"
readme = "README.md"

[project.urls]
homepage = "https://github.com/ranger-labs/FrameML"
repository = "https://github.com/ranger-labs/FrameML"
